icon colors for mobiel

--- a/about-me.css
+++ b/about-me.css
@@ -394,13 +394,25 @@ nav a:hover {
        color: #ffb1c3;
     }
 
+    .fa-github-square {
+      color: black;
+    }
+
     .fa-linkedin:hover{
        color: #ffb1c3;
+    }
+    .fa-linkedin {
+      color: black;
     }
 
     .fa-dribbble-square:hover{
        color: #ffb1c3;
     }
+
+    .fa-dribbble-square {
+      color: black;
+    }
+
 
 
  }
@@ -575,13 +587,25 @@ nav a:hover {
           color: #ffb1c3;
        }
 
+       .fa-github-square {
+         color: black;
+       }
+
        .fa-linkedin:hover{
           color: #ffb1c3;
+       }
+       .fa-linkedin {
+         color: black;
        }
 
        .fa-dribbble-square:hover{
           color: #ffb1c3;
        }
+
+       .fa-dribbble-square {
+         color: black;
+       }
+
 
 
  }
