--- a/project.css
+++ b/project.css
@@ -491,13 +491,25 @@ footer p {
       color: #ffb1c3;
    }
 
+   .fa-github-square {
+     color: black;
+   }
+
    .fa-linkedin:hover{
       color: #ffb1c3;
+   }
+   .fa-linkedin {
+     color: black;
    }
 
    .fa-dribbble-square:hover{
       color: #ffb1c3;
    }
+
+   .fa-dribbble-square {
+     color: black;
+   }
+
 
 
 }
@@ -643,12 +655,24 @@ footer p {
           color: #ffb1c3;
        }
 
+       .fa-github-square {
+         color: black;
+       }
+
        .fa-linkedin:hover{
           color: #ffb1c3;
+       }
+       .fa-linkedin {
+         color: black;
        }
 
        .fa-dribbble-square:hover{
           color: #ffb1c3;
        }
+
+       .fa-dribbble-square {
+         color: black;
+       }
+
 
 }
