--- a/project.css
+++ b/project.css
@@ -11,20 +11,20 @@ body {
 h1{
   font-family: 'Karla', sans-serif;
   font-size: 36px;
-  line-height: 167%;
+  line-height: 150%;
 }
 
 h3 {
   font-family: 'Karla', sans-serif;
   font-size: 30px;
-  line-height: 167%;
+  line-height: 150%;
 }
 
 h2 {
   font-family: 'Karla', sans-serif;
-  font-size: 24px;
-  line-height: 167%;
-  margin: 40px;
+  font-size: 30px;
+  line-height: 150%;
+  margin: auto 40px;
 
 }
 
@@ -154,8 +154,8 @@ nav a:hover {
   .main p {
     font-family: 'Montserrat', sans-serif;
     font-size: 20px;
-    margin: 40px;
-    line-height: 167%;
+    margin: 15px 40px;
+    line-height: 150%;
   }
 
   /*images*/
@@ -183,10 +183,11 @@ nav a:hover {
 
 
   .mood, .troveblue, .mockupimage {
-    width: 70%;
+    width: 80%;
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 10px;
   }
 
 
@@ -198,7 +199,7 @@ nav a:hover {
   }
 
   .graph {
-    width: 50%;
+    width: 40%;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -210,6 +211,15 @@ nav a:hover {
     margin-left: auto;
     margin-right: auto;
   }
+
+  .trove_landing {
+    width: 70%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+
   /* connect */
   .connect p {
     font-family: 'Montserrat', sans-serif;
@@ -298,9 +308,9 @@ footer p {
 
   h3 {
     font-family: 'Karla', sans-serif;
-    font-size: 30px;
-    line-height: 167%;
-    margin: 20px;
+    font-size: 24px;
+    line-height: 100%;
+    margin: auto 20px;
   }
 
   h2 {
@@ -320,7 +330,7 @@ footer p {
   .main p {
     font-family: 'Montserrat', sans-serif;
     font-size: 18px;
-    margin: 20px;
+    margin:  auto 20px;
     line-height: 150%;
   }
 
