--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,7 @@ nav a:hover {
  font-family: 'Montserrat', sans-serif;
  font-size: 20px;
  margin: 30px 5px;
+ line-height: 150%;
 }
 
 .capstone_project a:link, a:visited {
@@ -197,13 +198,14 @@ nav a:hover {
 .trove_project {
   width: 50%;
   display: inline-block;
-  margin-left: 200px;
+  text-align: right;
   vertical-align: top;
   margin-top: 40px;
 }
 
 .trove {
   width: 30%;
+  margin-left: 150px;
   display: inline-block;
   margin-top: 40px;
 }
