--- a/css/style.css
+++ b/css/style.css
@@ -415,7 +415,9 @@ footer p {
      text-align: center;
    }
 
-
+   .fa-angle-double-down {
+     margin-top: 100px;
+   }
 
    .trovepic {
      height: auto;
@@ -582,7 +584,9 @@ footer p {
      text-align: center;
    }
 
-
+   .fa-angle-double-down {
+     margin-top: 100px;
+   }
 
    .trovepic {
      height: auto;
